Fixed nav bar being covered

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -9,6 +9,7 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 9999;
 }
 
 .topnav a {
@@ -38,7 +39,7 @@ body {
     text-align: center;
     padding: 16px;
     margin-top: 30px;
-    height: 1500px;
+    height: fixed;
 }
 
 .about {
@@ -68,7 +69,7 @@ body {
     height: 100vh;
     display: flex;
     align-items: center;
-    padding: 0 10%;
+    padding: 80px 10% 0 10%;
     color: white;
     position: relative;
 }
